Use same app for simplicity

--- a/examples/hello-xgboost/app/config/config_fed_server.json
+++ b/examples/hello-xgboost/app/config/config_fed_server.json
@@ -14,8 +14,8 @@
   ],
   "workflows": [
     {
-      "id": "mpi_controller",
-      "path": "mpi_controller.MPIController",
+      "id": "xgboost_controller",
+      "path": "xgboost_controller.XGBoostController",
       "args": {
         "train_timeout": 30000
       }
