--- a/job_templates/sag_np_ipc_pipe/config_fed_client.conf
+++ b/job_templates/sag_np_ipc_pipe/config_fed_client.conf
@@ -77,14 +77,9 @@
     {
       id = "pipe"
 
-      path = "nvflare.fuel.utils.pipe.file_pipe.FilePipe"
+      path = "nvflare.fuel.utils.pipe.ipc_ppipe.IPCPPipe"
 
       args {
-        mode = "PASSIVE"
-        # root_path: is the directory location of the parameters exchange.
-        # If empty string, it will be set to the app_dir of the running job.
-        # You can also set it to an absolute path in your system.
-        root_path = ""
       }
     },
     {
