--- a/job_templates/sag_pt/config_fed_client.conf
+++ b/job_templates/sag_pt/config_fed_client.conf
@@ -53,6 +53,7 @@
           # everytime it receives a task from server
           launch_once = true
 
+          analytic_sender_id = "analytic_sender"
         }
       }
     }
@@ -74,6 +75,19 @@
 
       # the launcher will invoke the script
       args.script = "python3 custom/{app_script}  {app_config} "
+    },
+    {
+      id = "analytic_sender"
+      path = "nvflare.app_common.widgets.streaming.AnalyticsSender"
+      args.event_type = "analytix_log_stats"
+    },
+    {
+      id = "event_to_fed"
+      path = "nvflare.app_common.widgets.convert_to_fed_event.ConvertToFedEvent"
+      args {
+        events_to_convert = ["analytix_log_stats"]
+        fed_event_prefix = "fed."
+      }
     }
   ]
 }
