--- a/job_templates/sag_np/config_fed_client.conf
+++ b/job_templates/sag_np/config_fed_client.conf
@@ -50,8 +50,6 @@
           # for the whole job, if launch_once is false, the executor will call launcher.launch_task
           # everytime it receives a task from server
           launch_once = true
-
-          analytic_sender_id = "analytic_sender"
         }
       }
     }
@@ -85,6 +83,26 @@
         # If empty string, it will be set to the app_dir of the running job.
         # You can also set it to an absolute path in your system.
         root_path = ""
+      }
+    },
+    {
+      id = "metrics_pipe"
+
+      path = "nvflare.fuel.utils.pipe.file_pipe.FilePipe"
+
+      args {
+        mode = "PASSIVE"
+        # root_path: is the directory location of the parameters exchange.
+        # If empty string, it will be set to the app_dir of the running job.
+        # You can also set it to an absolute path in your system.
+        root_path = ""
+      }
+    },
+    {
+      id = "metrics_retriever"
+      path = "nvflare.app_common.metrics_exchange.metrics_retriever.MetricsRetriever"
+      args {
+        pipe_id = "metrics_pipe"
       }
     },
     {
