--- a/examples/hello-world/hello-flower/flwr-pt/pyproject.toml
+++ b/examples/hello-world/hello-flower/flwr-pt/pyproject.toml
@@ -8,8 +8,8 @@ version = "1.0.0"
 description = ""
 license = "Apache-2.0"
 dependencies = [
-    "flwr>=1.16,<2.0",
-    "nvflare~=2.6.0rc",
+    "flwr[simulation]==1.11.0",
+    "nvflare~=2.5.0rc",
     "torch==2.2.1",
     "torchvision==0.17.1",
     "tensorboard"
@@ -33,5 +33,3 @@ default = "local-simulation"
 
 [tool.flwr.federations.local-simulation]
 options.num-supernodes = 2
-address = "127.0.0.1:9093"
-insecure = true
